Possible compatibility problems with earlier versions marked with '*'.

* CHANGED DEFINITION OF ES: UPDATE (INCLUDING THE OID) to reflect the
new definition from the ZIG. NOTE THIS IF YOU HAVE AN UPDATE
IMPLEMENTATION! This change was made to the development version before
the ZIG decided to retract the amendment. If any users MUST be
compatible with the original Update definition, PLEASE CONTACT US, and
we will include a separate definition corresponding to the old Update
ES. Note that because of the change to the ASN.1 of the
TaskPackageRecordStructure we cannot define a single structure that
will support both versions.

* Added const modifier to buffer parameter for some ODR/BER encoding
routines: ber_dectag, ber_declen, odp_more_chunks, completeBER,
completeWAIS, odr_dumpBER.

Fixed bug in client.c which caused a crash when a scanResponse didn't
contain positionOfTerm.

* Fixed inconsistency in the ScanResponse/ListEntries protocol. This
* will cause an error in a client if a non-YAZ target sends both a
* list of Scan entries and non-surrogate diagnostics.

Retrieval module enhancements. Tag sets may be typed in the reference
to it. From the .abs-file the "tagset" directive takes a third optional
integer type for the tag set referenced. From a .tag-file the "include"
directive takes a third optional type as well. The old "type" directive
in the tag set itself is still recognized but acts as the default type
for the tag set.

Backend interface change. Individual Scan terms returned from bend_scan
may also be tagged as Surrogate Diagnostics. Refer to struct scan_entry
in include/backend.h.

Retrieval module enhancements. Multiple tag sets and attribute sets may
be specified in abstract syntax specs. Revised the error/warning for
logging messages reported by the retrieval module when reading the
various spec files.

Object Identifier system (oid_..) changed. The API is backwards
compatible but the oid-routines now allocates new OID's when needed.