@@ -1,5 +1,9 @@
 Possible compatibility problems with earlier versions marked with '*'.
 
+Added support for GNU readline in client. Thanks to Jacob Poulsen
+<ja7@groucho.dbc.bib.dk>. GNU configure attempts to detect if readline
+is available.
+
 * CHANGED DEFINITION OF ES: UPDATE (INCLUDING THE OID) to reflect the
 new definition from the ZIG. NOTE THIS IF YOU HAVE AN UPDATE
 IMPLEMENTATION! This change was made to the development version before
